--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.googlecode.jcamp-dx</groupId>
-  <artifactId>algorithms</artifactId>
+  <artifactId>jcamp-dx</artifactId>
   <version>0.9.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
