--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.googlecode.jcamp-dx</groupId>
   <artifactId>jcamp-dx</artifactId>
-  <version>0.9.2-SNAPSHOT</version>
+  <version>0.9.2</version>
   <packaging>jar</packaging>
 
   <name>jcamp-dx</name>
@@ -58,7 +58,7 @@
     <connection>scm:git:https://code.google.com/p/jcamp-dx/</connection>
     <developerConnection>scm:git:https://code.google.com/p/jcamp-dx/</developerConnection>
     <url>https://code.google.com/p/jcamp-dx/</url>
-    <tag>HEAD</tag>
+    <tag>jcamp-dx-0.9.2</tag>
   </scm>
 
   <dependencies>
