--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,16 @@
 		<artifactId>oss-parent</artifactId>
 		<version>9</version>
 	</parent>
-	<groupId>com.github.fracpete</groupId>
+	<groupId>com.github.kerner</groupId>
 	<artifactId>jcamp-dx</artifactId>
-	<version>0.9.4-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<version>0.10.0-SNAPSHOT</version>
 	<name>jcamp-dx</name>
 	<description>The JCAMP-DX project is the reference implemention of the IUPAC JCAMP-DX spectroscopy data standard.</description>
-	<url>https://github.com/fracpete/jcamp-dx</url>
+	<url>https://github.com/kerner/jcamp-dx</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
 	<licenses>
 		<license>
 			<name>GNU General Public License 2</name>
@@ -40,6 +43,7 @@
 		<developer>
 			<id>kerner</id>
 			<name>Alexander Kerner</name>
+			<organization>SilicoSciences</organization>
 			<organizationUrl>http://www.silico-sciences.com</organizationUrl>
 			<roles>
 				<role>maintainer</role>
@@ -57,18 +61,17 @@
 			</roles>
 		</developer>
 	</developers>
-
 	<scm>
-		<connection>scm:git:https://github.com/fracpete/jcamp-dx</connection>
-		<developerConnection>scm:git:https://github.com/fracpete/jcamp-dx</developerConnection>
-		<url>https://github.com/fracpete/jcamp-dx</url>
+		<connection>scm:git:https://github.com/kerner1000/jcamp-dx</connection>
+		<developerConnection>scm:git:https://github.com/kerner1000/jcamp-dx</developerConnection>
+		<url>https://github.com/kerner/jcamp-dx</url>
 		<tag>HEAD</tag>
 	</scm>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.2</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -92,47 +95,6 @@
 			<version>1.3.1</version>
 		</dependency>
 	</dependencies>
-	<profiles>
-		<profile>
-			<id>release-sign-artifacts</id>
-			<activation>
-				<property>
-					<name>performRelease</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.1</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<!-- used for skipping tests -->
-			<id>no-tests</id>
-			<properties>
-				<skipTests>true</skipTests>
-			</properties>
-		</profile>
-	</profiles>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	</properties>
-
 	<build>
 		<pluginManagement>
 			<plugins>
