--- a/pom.xml
+++ b/pom.xml
@@ -221,10 +221,9 @@
 			<version>1.7.12</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.12</version>
-			<scope>test</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.kerner-utils-io</groupId>
