Fix: Replace Hashtable with LinkedHashMap in order to preserve element order. Change JCAMPBlock#toString.

--- a/pom.xml
+++ b/pom.xml
@@ -231,5 +231,10 @@
 			<version>0.5.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.kerner-utils-collections</groupId>
+			<artifactId>kerner-utils-collections</artifactId>
+			<version>0.27.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
