--- a/pom.xml
+++ b/pom.xml
@@ -228,7 +228,7 @@
 		<dependency>
 			<groupId>net.sf.kerner-utils</groupId>
 			<artifactId>kerner-utils</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.kerner-utils-collections</groupId>
