--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
   <url>https://github.com/fracpete/jcamp-dx</url>
   <licenses>
     <license>
-      <name>GNU General Public License 2</name>
-      <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
+      <name>GNU Library General Public License 2</name>
+      <url>http://www.gnu.org/licenses/lgpl-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
