--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 		<github.global.server>github</github.global.server>
 	</properties>
 	<licenses>
-		<license>
-			<name>GNU General Public License 2</name>
-			<url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+    <license>
+      <name>GNU Library General Public License 2</name>
+      <url>http://www.gnu.org/licenses/lgpl-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 	<developers>
 		<developer>
 			<id>tweber</id>
