--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -9,10 +8,10 @@
 	</parent>
 	<groupId>com.github.kerner</groupId>
 	<artifactId>jcamp-dx</artifactId>
-	<version>0.10.0-SNAPSHOT</version>
+	<version>0.10.0</version>
 	<name>jcamp-dx</name>
 	<description>The JCAMP-DX project is the reference implemention of the IUPAC JCAMP-DX spectroscopy data standard.</description>
-	<url>https://github.com/kerner/jcamp-dx</url>
+	<url>https://github.com/kerner1000/jcamp-dx</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -32,6 +31,7 @@
 			<organization>Creon Lab Control</organization>
 			<roles>
 				<role>original author</role>
+				<role>developer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -39,6 +39,7 @@
 			<name>Stefan Kuhn</name>
 			<roles>
 				<role>original author</role>
+				<role>developer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -48,6 +49,17 @@
 			<organizationUrl>http://www.silico-sciences.com</organizationUrl>
 			<roles>
 				<role>maintainer</role>
+				<role>developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>rudolphi</id>
+			<name>Felix Rudolphi</name>
+			<organization>Sciformation Consulting</organization>
+			<organizationUrl>http://www.sciformation.com</organizationUrl>
+			<roles>
+				<role>maintainer</role>
+				<role>developer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -59,6 +71,7 @@
 			<roles>
 				<role>maintainer</role>
 				<role>maven deployment</role>
+				<role>developer</role>
 			</roles>
 		</developer>
 	</developers>
