--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>com.github.kerner1000</groupId>
 	<artifactId>jcamp-dx</artifactId>
-	<version>0.10.4-SNAPSHOT</version>
+	<version>0.10.5-SNAPSHOT</version>
 	<name>jcamp-dx</name>
 	<description>The JCAMP-DX project is the reference implemention of the IUPAC JCAMP-DX spectroscopy data standard.</description>
 	<url>https://github.com/kerner1000/jcamp-dx</url>
@@ -216,7 +216,7 @@
 		<dependency>
 			<groupId>antlr</groupId>
 			<artifactId>antlr</artifactId>
-			<version>2.7.2</version>
+			<version>2.7.7</version>
 		</dependency>
 		<dependency>
 			<groupId>regexp</groupId>
@@ -250,10 +250,17 @@
 			<version>1.0.0</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
-			<groupId>net.sf.kerner-utils-io</groupId>
-			<artifactId>kerner-utils-io</artifactId>
-			<version>0.5.3</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
