--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.fracpete</groupId>
   <artifactId>jcamp-dx</artifactId>
   <version>0.9.8-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -49,14 +48,14 @@
   </developers>
 
   <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
+    <groupId>com.github.fracpete</groupId>
+    <artifactId>central-portal-parent</artifactId>
+    <version>0.0.2</version>
   </parent>
 
   <scm>
-    <connection>scm:git:https://github.com/fracpete/jcamp-dx</connection>
-    <developerConnection>scm:git:https://github.com/fracpete/jcamp-dx</developerConnection>
+    <connection>scm:git:ssh://git@github.com/fracpete/jcamp-dx</connection>
+    <developerConnection>scm:git:ssh://git@github.com/fracpete/jcamp-dx</developerConnection>
     <url>https://github.com/fracpete/jcamp-dx</url>
     <tag>HEAD</tag>
   </scm>
@@ -72,13 +71,13 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.1.1</version>
+      <version>1.3.5</version>
     </dependency>
 
     <dependency>
       <groupId>antlr</groupId>
       <artifactId>antlr</artifactId>
-      <version>2.7.2</version>
+      <version>2.7.7</version>
     </dependency>
 
     <dependency>
@@ -86,38 +85,9 @@
       <artifactId>regexp</artifactId>
       <version>1.3</version>
     </dependency>
-
   </dependencies>
 
   <profiles>
-    <profile>
-      <id>release-sign-artifacts</id>
-      <activation>
-        <property>
-          <name>performRelease</name>
-          <value>true</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.1</version>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
     <profile>
       <!-- used for skipping tests -->
       <id>no-tests</id>
@@ -140,8 +110,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.0.2</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.8</source>
+            <target>1.8</target>
           </configuration>
         </plugin>
 
@@ -157,7 +127,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>2.4.1</version>
+        <version>3.4.1</version>
         <configuration>
           <filesets>
             <fileset>
@@ -175,37 +145,11 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <excludeResources>true</excludeResources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8.1</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
+        <version>2.10.3</version>
         <configuration>
           <show>protected</show>
           <nohelp>true</nohelp>
-          <doctitle>${project.name}</doctitle>
           <additionalparam>-Xdoclint:none</additionalparam>
         </configuration>
       </plugin>
