--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>jcamp-dx</artifactId>
-  <version>0.9.8-SNAPSHOT</version>
+  <version>0.9.8</version>
   <packaging>jar</packaging>
 
   <name>jcamp-dx</name>
@@ -57,7 +57,7 @@
     <connection>scm:git:ssh://git@github.com/fracpete/jcamp-dx</connection>
     <developerConnection>scm:git:ssh://git@github.com/fracpete/jcamp-dx</developerConnection>
     <url>https://github.com/fracpete/jcamp-dx</url>
-    <tag>HEAD</tag>
+    <tag>jcamp-dx-0.9.8</tag>
   </scm>
 
   <dependencies>
